@@ -1,6 +1,7 @@
 from zope.interface import implements
 from zope.interface.declarations import Implements, implementedBy
 from plone.indexer.interfaces import IIndexer
+from functools import update_wrapper
 
 
 class DelegatingIndexer(object):
@@ -25,6 +26,7 @@ class DelegatingIndexerFactory(object):
     def __init__(self, callable):
         self.callable = callable
         self.__implemented__ = Implements(implementedBy(DelegatingIndexer))
+        update_wrapper(self, callable)
 
     def __call__(self, object, catalog=None):
         return DelegatingIndexer(object, catalog, self.callable)
